--- a/learning_logs/templates/learning_logs/topics.html
+++ b/learning_logs/templates/learning_logs/topics.html
@@ -1,5 +1,7 @@
 {% extends "learning_logs/base.html" %} {% block content %}
-<h2>Topics</h2>
+<h2>Topics</h2> 
+<br>
+<a href="{% url "learning_logs:new_topic" %}">Add new topic</a>
 {% for topic in topics %}
 <ul>
   <li><a href={% url 'learning_logs:topic' topic.id%}>{{topic.text}}<a/></li>
