--- a/learning_logs/templates/learning_logs/base.html
+++ b/learning_logs/templates/learning_logs/base.html
@@ -1,6 +1,8 @@
 <p>© 
-    <a href="{% url 'learning_logs:index' %}">Learning Log</a> - 
-    <a href="{% url 'learning_logs:topics' %}">Topics</a>
+    <a href="{% url 'learning_logs:index' %}">Learning Log</a> 
+    {% if user.is_authenticated %}
+       - <a href="{% url 'learning_logs:topics' %}">Topics</a>
+    {% endif %}
 </p>
 <div>
     {% if user.is_authenticated %}
@@ -13,6 +15,8 @@
 
     {% else %}
         <a href="{% url 'accounts:login' %}">Login</a>
+        <br>
+        <a href="{% url 'accounts:register' %}">Register</a>
     {% endif %}
 </div>
 
