--- a/learning_logs/templates/learning_logs/base.html
+++ b/learning_logs/templates/learning_logs/base.html
@@ -1,23 +1,64 @@
-<p>© 
-    <a href="{% url 'learning_logs:index' %}">Learning Log</a> 
-    {% if user.is_authenticated %}
-       - <a href="{% url 'learning_logs:topics' %}">Topics</a>
-    {% endif %}
-</p>
-<div>
-    {% if user.is_authenticated %}
-        Hello, {{ user.username }}!
-        <br>
-        <form action="{% url 'accounts:logout' %}" method="POST">
-            {% csrf_token %}
-            <button name="submit" type="submit">Logout</button>
-        </form>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Learning Logs</title>
+    {% load django_bootstrap5 %} {% bootstrap_css %} {% bootstrap_javascript %}
+  </head>
+  <body>
+    <nav
+      class="navbar navbar-expand-lg navbar-light bg-light mb-4 border-bottom"
+    >
+      <div class="container">
+        <a class="navbar-brand" href="/">Learning Logs</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav ms-auto">
+            {% if user.is_authenticated %}
+            <li class="nav-item">
+              <strong class="nav-link fw-bold"
+                >Hello, {{user.username | title}}!</strong
+              >
+            </li>
+            <li class="nav-item">
+              <form action="{% url 'accounts:logout' %}" method="POST">
+                {% csrf_token %}
+                <button name="submit" type="submit" class="btn btn-light">
+                  Logout
+                </button>
+              </form>
+            </li>
+            {% else %}
 
-    {% else %}
-        <a href="{% url 'accounts:login' %}">Login</a>
-        <br>
-        <a href="{% url 'accounts:register' %}">Register</a>
-    {% endif %}
-</div>
-
-{% block content %} {% endblock content %}
+            <li class="nav-item">
+              <a class="btn btn-success" href="{% url 'accounts:login' %}">
+                Login
+              </a>
+            </li>
+            <li class="nav-item ms-0 mt-2 mt-md-0 ms-md-3">
+              <a
+                class="btn btn-outline-success"
+                href="{% url 'accounts:register' %}"
+              >
+                Register
+              </a>
+            </li>
+            {% endif %}
+          </ul>
+        </div>
+      </div>
+    </nav>
+    <div class="container">{% block content %}{% endblock content %}</div>
+  </body>
+</html>
