--- a/accounts/templates/registration/register.html
+++ b/accounts/templates/registration/register.html
@@ -1,9 +1,19 @@
 {% extends "learning_logs/base.html" %} 
+{% load django_bootstrap5 %}
 
 {% block content %} 
-    <form action={% url 'accounts:register' %} method="POST">
-        {% csrf_token %}
-        {{form.as_div}}
-        <button type="submit" name="submit">Submit<button>
-    </form>
+    <div class="container">
+        <div class="row">
+            <h3 class="mb-5 text-center">Register</h3>
+            <div class="col d-flex justify-content-center align-items-center">
+                <form class="form" action={% url 'accounts:register' %} method='POST'>
+                    {% csrf_token %}
+                    {% bootstrap_form form %}
+                    <div class="form-group">
+                        {% bootstrap_button button_type="submit" button_class="btn-success btn-block w-100" content="Submit" %}    
+                    </div>            
+                </form>
+            </div>
+        </div>
+    </div>
 {% endblock content %}
