--- a/learning_logs/templates/learning_logs/index.html
+++ b/learning_logs/templates/learning_logs/index.html
@@ -1,3 +1,49 @@
-{% extends "learning_logs/base.html" %} {% block content %}
-<p>Learning logs help you keep track of your learning.</p>
+{% extends "learning_logs/base.html" %} 
+{% load static %}
+
+{% block content %} 
+{% if user.is_authenticated %}
+<div class="container">
+  <div class="row">
+    <div class="col-12 bg-success bg-gradient text-white py-4 px-2 px-md-5 mb-5">
+        <h3>{{ greeting }}</h3>
+        <p>What did you learn today? Log your insights now so you can easily revisit them later.</p>
+        <a class="btn btn-light text-success fw-bold" href="{% url 'learning_logs:topics' %}">+ Write an entry</a>
+    </div>
+    <div class="col-md-4 mx-0 px-0">
+      <div class="card">
+        <div class="card-body py-5">
+          <h4 class="card-title mb-3">Topics</h4>
+          <p class="card-text">You've added: {{ topic_count }} topic{% if topic_count > 1 %}s{% endif %}</p>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-4 mx-0 mx-md-4 px-0 mt-3 mt-md-0">
+      <div class="card">
+        <div class="card-body py-5">
+          <h4 class="card-title mb-3">Entries</h4>
+          <p class="card-text">You've added: {{ entry_count }} {% if topic_count <= 1 %}entry{% else %}entries{% endif %}</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+{% else %}
+<div class="container">
+  <div class="row">
+    <div class="col bg-dark bg-gradient text-white py-5 px-2 px-md-5">
+      <h3>Learning logs help you keep track of your learning.</h3>
+      <p>
+        A learning log is a valuable tool designed to help you track and reflect
+        on your learning journey. By consistently recording your thoughts,
+        insights, and progress, you can better understand what you've learned
+        and identify areas for improvement. Whether you're studying a new topic,
+        developing a skill, or working on a project, a learning log keeps you
+        organized and focused on your educational goals.
+      </p>
+    </div>
+    <img class="mt-5" src="{% static '/images/hero_img.png' %}" alt="My image">
+  </div>
+</div>
+{% endif %} 
 {% endblock content %}
