Fixed topics html

--- a/learning_logs/templates/learning_logs/topics.html
+++ b/learning_logs/templates/learning_logs/topics.html
@@ -20,7 +20,7 @@
           </li>
         </ul>
       {% empty %}
-        <a class="card text-decoration-none" href={% url 'learning_logs:topic' topic.id%}>
+        <a class="card text-decoration-none">
           <div class="card-body border-start border-success border-5">
             <p class='text-decoration-none text-dark my-0 py-0 fw-bold'>No topic/s added.</p>
           </div>
